--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,6 @@
 name: Pipeline
 
-on: [push]
+on: [ push ]
 
 env:
   APPLICATION_NAME: app2
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Setup python env
+      - name: Setup Python environment
         uses: actions/setup-python@v1.1.1
 
-      - name: Install res
+      - name: Install requirements
         run: pip install --quiet --requirement requirements.txt
 
       - name: Lint code
